@@ -164,11 +164,13 @@ e:SetScript("OnEvent", function(self, event, ...)
 							minimap = true,
 							world = true,
 							from = addonName,
-							minimap_icon = coords[5],
-							worldmap_icon = coords[5],
+							minimap_icon = coords[5] or nil,
+							worldmap_icon = coords[5] or nil,
 						}
 						TomTom:AddWaypoint(coords[1], coords[2] / 100, coords[3] / 100, opts);
 					end
+					TomTom:SetClosestWaypoint()
+					break
 				end
 			end
 		end
