@@ -1,4 +1,6 @@
 HelpMePlay | 1.1.2
+	New Features:
+		- Waypoints: When certain quests are accepted, 1 or more documented waypoints will be added to the map. (Only works if TomTom is installed and loaded.)
 	Fixes and Updates:
 		- Restored the previous behavior for Threads of Fate automation. If the player disables the feature, the addon will opt them into Story Mode.
 		- Updated the settings descriptions to more accurately reflect their latest capabilities.
